Added Netty variant for greeting-service